--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.1.0",
+    "cache-manager": "^5.1.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
