add redis and cluster

--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
     "@types/bcrypt": "^5.0.0",
+    "@types/cache-manager": "^2.10.3",
     "@types/cookie-parser": "^1.4.3",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
     "bcrypt": "^5.1.0",
-    "cache-manager": "^5.1.4",
+    "cache-manager": "^3.4.0",
+    "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
