--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,20 @@ services:
     - docker.env
     networks:
     - postgres
+
+  redis:
+    image: "redis:alpine"
+    ports:
+      - "6379:6379"
+
+  redis-commander:
+    image: rediscommander/redis-commander:latest
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - "8081:8081"
+    depends_on:
+        - redis
  
 networks:
   postgres:
