--- a/package.json
+++ b/package.json
@@ -47,10 +47,12 @@
     "cookie-parser": "^1.4.6",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.16",
+    "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.8.0",
+    "qrcode": "^1.5.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
