--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/apollo": "^10.1.7",
+    "@nestjs/bull": "^0.6.2",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
     "@nestjs/core": "^9.0.0",
@@ -33,13 +34,18 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/adm-zip": "^0.5.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/bull": "^4.10.0",
     "@types/cache-manager": "^2.10.3",
     "@types/cookie-parser": "^1.4.3",
+    "@types/imagemin": "^7.0.0",
     "@types/passport-jwt": "^3.0.7",
     "@types/passport-local": "^1.0.34",
+    "adm-zip": "^0.5.10",
     "apollo-server-express": "^3.11.1",
     "bcrypt": "^5.1.0",
+    "bull": "^4.10.2",
     "cache-manager": "^3.4.0",
     "cache-manager-redis-store": "^2.0.0",
     "class-transformer": "^0.5.1",
@@ -47,6 +53,8 @@
     "cookie-parser": "^1.4.6",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.16",
+    "imagemin": "^7.0.1",
+    "imagemin-pngquant": "^9.0.2",
     "otplib": "^12.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
@@ -64,6 +72,7 @@
     "@nestjs/testing": "^9.0.0",
     "@types/express": "^4.17.13",
     "@types/jest": "28.1.8",
+    "@types/multer": "^1.4.7",
     "@types/node": "^16.0.0",
     "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
