--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "twilio": "^3.84.1",
     "typeorm": "^0.3.10"
   },
   "devDependencies": {
